Make sure we're always aligned left

--- a/launcher/launcher.css
+++ b/launcher/launcher.css
@@ -1,4 +1,5 @@
 wplauncher {
+    text-align:left;
     font-family:Helvetica;
     opacity:1.0;
     z-index: 100000;
